fix text-align in people say section

--- a/modular_landing/scss/main-section.scss
+++ b/modular_landing/scss/main-section.scss
@@ -202,12 +202,12 @@
 }
 
 .people-say__category-description {
-    text-align: left;
+    text-align: left !important;
     text-transform: uppercase;
 }
 
 .people-say__category-title {
-    text-align: left;
+    text-align: left !important;
     margin-top: 8px;
     line-height: 64px;
     text-transform: capitalize;
